--- a/进度.md
+++ b/进度.md
@@ -1,7 +1,13 @@
 # 基于go语言的区块链
-## 目前进度
+## 目前进度 阶段一
 * 定义区块结构
 * 生成区块方法
 * 计算区块哈希
 * 生成创世区块
 * 工作量证明
+## 阶段二
+* 将区块序列化字节数组
+* 将区块存储到数据库
+* 字节数组反序列化成区块
+* 每产生一个区块都会存到数据库
+* 将最后一个区块的hash存到数据库
